--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   background-color: #edebeb;
 }
 
-header {
+/* header {
   background-color: #bebdbd;
   padding: 1rem;
   font-size: 50px;
@@ -16,10 +16,13 @@ header {
 header a {
   color: #de0909;
   font-weight: bold;
-  text-decoration: none;
+  text-decoration: none; */
+.site-container {
+  min-height: 100vh;
 }
 main {
-  padding: 1rem;
+  /* padding: 1rem; */
+  flex: 1;
 }
 .products {
   display: flex;
