--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,17 @@ main {
   /* padding: 1rem; */
   flex: 1;
 }
+.btn-primary {
+  background-color: #ee150e;
+  color: #000000;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+.rating span {
+  color: #ee150e;
 }
 
 .product {
